--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,15 @@
 spring:
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    baseline-description: Flyway Scripts
+    #    locations: classpath:/migration
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+    url: ${spring.datasource.url}
+    default-schema: training_records_schema
+    out-of-order: true
+    ignore-migration-patterns: '*:ignored'
   datasource:
     hikari:
       jdbc-url: "jdbc:postgresql://localhost:5432/training_records"
@@ -9,3 +20,9 @@ spring:
     url: "jdbc:postgresql://localhost:5432/training_records"
 server:
   port: 8081
+
+---
+
+jwt:
+  secret: zaqxwcde1234567890
+  expiration: 60000
