--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.3</version>
+<!--        <version>2.3.1.RELEASE</version>-->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -40,6 +41,8 @@
         <spring.boot.version>2.7.3</spring.boot.version>
         <lombok.version.custom>1.18.22</lombok.version.custom>
         <jwt.version>0.9.1</jwt.version>
+<!--        <swagger.version>2.9.2</swagger.version>-->
+        <swagger.version>3.0.0</swagger.version>
     </properties>
 
     <!--    <packaging>war</packaging>-->
@@ -181,7 +184,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>9.3.0</version>
+<!--            <version>9.3.0</version>-->
         </dependency>
 
         <dependency>
@@ -208,7 +211,32 @@
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
         </dependency>
-        <!--        <dependency>-->
+        <!-- -SWAGGER2-->
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+<!--        <dependency>-->
+<!--            <groupId>io.springfox</groupId>-->
+<!--            <artifactId>springfox-swagger2</artifactId>-->
+<!--            <version>${swagger.version}</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>io.springfox</groupId>-->
+<!--            <artifactId>springfox-swagger-ui</artifactId>-->
+<!--            <version>${swagger.version}</version>-->
+<!--        </dependency>-->
+        <!-- -SWAGGER3-->
+                        <dependency>
+                            <groupId>org.springdoc</groupId>
+                            <artifactId>springdoc-openapi-ui</artifactId>
+                            <version>1.6.4</version>
+                        </dependency>
+
+                        <dependency>
+                            <groupId>org.springdoc</groupId>
+                            <artifactId>springdoc-openapi-webflux-ui</artifactId>
+                            <version>1.6.4</version>
+                        </dependency>
+                <!--        <dependency>-->
 <!--            <groupId>org.springframework</groupId>-->
 <!--            <artifactId>spring-aop</artifactId>-->
 <!--            <version>${spring.release}</version>-->
