--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,13 @@
                             <artifactId>springdoc-openapi-webflux-ui</artifactId>
                             <version>1.6.4</version>
                         </dependency>
+
+        <!--          Entity into  DTO-->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.9</version>
+        </dependency>
                 <!--        <dependency>-->
 <!--            <groupId>org.springframework</groupId>-->
 <!--            <artifactId>spring-aop</artifactId>-->
